Set d-list-item to display:block not display:flex. Fixes problem with lists in popups on IE11. Fixes #590

--- a/Panel/themes/bootstrap/Panel.css
+++ b/Panel/themes/bootstrap/Panel.css
@@ -5,11 +5,11 @@
   display: block;
   position: relative;
   overflow: auto;
-  -webkit-box-flex: 1 1 auto;
-  -moz-box-flex: 1 1 auto;
-  -webkit-flex: 1 1 auto;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 .d-panel {
   -webkit-box-sizing: border-box;
@@ -42,11 +42,6 @@
   border-bottom: 1px solid;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
-  -webkit-box-flex: 0 0 auto;
-  -moz-box-flex: 0 0 auto;
-  -webkit-flex: 0 0 auto;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
 }
 .d-panel .d-panel-header {
   border-color: #dddddd;
